# Rust_with_AI

./: README.md
API/: Cargo.toml
AWS_S3_upload/: Cargo.toml  README.md
AWS_S3_upload/src/: main.rs
ToDo_API/: README.md
ToDo_API/src/: main.rs
battery_laptop/: Cargo.toml
battery_laptop/src/: main.rs
binary_analizer/: Cargo.toml
binary_analizer/src/: main.rs
calendar/: Cargo.toml
calendar/src/: main.rs
kernel_reader/: Cargo.toml
kernel_reader/src/: main.rs
linux_filesystem/: Cargo.toml
linux_filesystem/src/: main.rs
ls_command/: Cargo.toml
ls_command/src/: main.rs
ls_table/: Cargo.toml
ls_table/src/: main.rs
network_analyzer/: Cargo.toml
network_analyzer/src/: main.rs
process/: Cargo.toml
process/src/: main.rs
read_memory/: Cargo.toml
repology-cli_v01/: Cargo.toml
repology-cli_v01/src/: cli.rs  main.rs  models.rs  query.rs
repology_api/: Cargo.toml  README.md
repology_api/src/: main.rs
tokio/src/: main.rs
wifi_details/: Cargo.toml
wifi_details/src/: main.rs
